@@ -1,1 +1,0 @@
-Distributed, multi-headed X protocol headers from modular X.org.
