@@ -1,20 +1,0 @@
-# $NetBSD: Makefile,v 1.1 2019/03/20 12:04:14 wiz Exp $
-
-DISTNAME=	libdmx-1.1.4
-CATEGORIES=	x11
-MASTER_SITES=	${MASTER_SITE_XORG:=lib/}
-EXTRACT_SUFX=	.tar.bz2
-
-MAINTAINER=	blair.sadewitz@gmail.com
-HOMEPAGE=	http://xorg.freedesktop.org/releases/individual/proto/
-COMMENT=	Distributed, multi-headed X protocol headers from modular X.org
-
-GNU_CONFIGURE=	yes
-USE_LIBTOOL=	yes
-USE_TOOLS+=	pkg-config
-
-PKGCONFIG_OVERRIDE+=	dmx.pc.in
-
-.include "../../x11/libXext/buildlink3.mk"
-.include "../../x11/xorgproto/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
