@@ -1,21 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2019/03/20 12:04:14 wiz Exp $
-include/X11/extensions/dmxext.h
-lib/libdmx.la
-lib/pkgconfig/dmx.pc
-man/man3/DMX.3
-man/man3/DMXAddInput.3
-man/man3/DMXAddScreen.3
-man/man3/DMXChangeDesktopAttributes.3
-man/man3/DMXChangeScreensAttributes.3
-man/man3/DMXForceWindowCreation.3
-man/man3/DMXGetDesktopAttributes.3
-man/man3/DMXGetInputAttributes.3
-man/man3/DMXGetInputCount.3
-man/man3/DMXGetScreenAttributes.3
-man/man3/DMXGetScreenCount.3
-man/man3/DMXGetWindowAttributes.3
-man/man3/DMXQueryExtension.3
-man/man3/DMXQueryVersion.3
-man/man3/DMXRemoveInput.3
-man/man3/DMXRemoveScreen.3
-man/man3/DMXSync.3
