@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.5123 2019/11/26 09:06:13 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.5124 2019/11/26 09:07:16 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -8272,3 +8272,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Removed x11/libxkbui [wiz 2019-11-25]
 	Updated x11/xdpyinfo to 1.3.2nb3 [wiz 2019-11-26]
 	Updated meta-pkgs/modular-xorg-libs to 1.12 [wiz 2019-11-26]
+	Removed x11/libdmx [wiz 2019-11-26]
